--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
     "next": "^15.4.4",
     "next-intl": "^4.3.4",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.10"
   }
 }
