--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
+    "clsx": "^2.1.1",
     "next": "^15.4.4",
     "next-intl": "^4.3.4",
     "postcss": "^8.5.6",
