--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/nextjs-vite": "^9.0.18",
     "@storybook/test": "9.0.0-alpha.2",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@types/node": "24.1.0",
     "@types/react": "19.1.8",
