--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
