--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:storybook": "storybook dev --port ${PORT:-6006} --host 0.0.0.0 --no-open",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "test": "vitest",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev --port ${PORT:-6006} --host 0.0.0.0 --no-open",
     "build-storybook": "storybook build"
   },
   "devDependencies": {
